--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 <body>
 
     <h1>Violet Evergarden</h1> 
-    <img id="image" src="https://raw.githubusercontent.com/TanakaDomp/uploder-db/main/uploads/gambarawal.jpeg" alt="Gambar" /> <!-- G ambar ditampilkan langsung -->
-    <p>Violet Evergarden adalah karakter yang sangat setia. Dia berdedikasi dan selalu mendahulukan kepentingan orang lain. Kesetiaannya terutama terlihat dalam hubungannya dengan Mayor Sennh, yang dia hormati dan cintai sepenuh hati. Selain itu, Violet selalu berusaha memahami dan membantu orang lain dengan tulus.</p> <!-- Deskripsi di bawah gambar -->
+    <img id="image" src="https://raw.githubusercontent.com/swndyy/uploder-db/main/uploads/gambarawal.jpeg" alt="Gambar" /> <!-- G ambar ditampilkan langsung -->
+    <p>Violet Evergarden adalah karakter yang sangat setia. Dia berdedikasi dan selalu mendahulukan kepentingan orang lain. Kesetiaannya terutama terlihat dalam hubungannya dengan Mayor Senna, yang dia hormati dan cintai sepenuh hati. Selain itu, Violet selalu berusaha memahami dan membantu orang lain dengan tulus.</p> <!-- Deskripsi di bawah gambar -->
 
     <div class="separator"></div> <!-- Pemisah antara bagian deskripsi dan media sosial -->
 
@@ -133,25 +133,25 @@
             <a href="https://www.facebook.com/share/181t2tbBcF/" class="social-button" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
             </a>
-            <a href="https://github.com/TanakaDomp" class="social-button" target="_blank">
+            <a href="https://github.com/swndyy" class="social-button" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
             </a>
         </div>
     </div>
 
     <div class="license">
-        <p>© 2025 Sennhndra. Semua hak dilindungi. Karya ini dikembangkan dengan dukungan Vercel.App</p>
+        <p>© 2025 SennaNetwork. Semua hak dilindungi. Karya ini dikembangkan dengan dukungan Vercel.App</p>
     </div>
 
     <script>
         const images = [
-            "https://raw.githubusercontent.com/TanakaDomp/uploder-db/main/uploads/gambarawal.jpeg",
-            "https://raw.githubusercontent.com/TanakaDomp/uploder-db/main/uploads/gambarkedua.jpeg",
-            "https://raw.githubusercontent.com/TanakaDomp/uploder-db/main/uploads/gambarketiga.jpeg",
-            "https://raw.githubusercontent.com/TanakaDomp/uploder-db/main/uploads/gambarkelima.jpeg",
+            "https://raw.githubusercontent.com/swndyy/uploder-db/main/uploads/gambarawal.jpeg",
+            "https://raw.githubusercontent.com/swndyy/uploder-db/main/uploads/gambarkedua.jpeg",
+            "https://raw.githubusercontent.com/swndyy/uploder-db/main/uploads/gambarketiga.jpeg",
+            "https://raw.githubusercontent.com/swndyy/uploder-db/main/uploads/gambarkelima.jpeg",
             "https://j.top4top.io/p_3213yg2e11.jpg",
             "https://l.top4top.io/p_3213jnss01.jpg",
-            "https://raw.githubusercontent.com/TanakaDomp/uploder-db/main/uploads/gambarempat.jpeg"
+            "https://raw.githubusercontent.com/swndyy/uploder-db/main/uploads/gambarempat.jpeg"
         ];
 
         let currentIndex = 0;
